# lp-0013-token-authorities

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  SECURITY.md  VIDEO_SCRIPT.md
.github/workflows/: ci.yml
artifacts/: token.idl.json  token_authority.idl.spel.json
crates/lez-approval/: Cargo.toml
crates/lez-approval/src/: lib.rs
crates/token-authority-core/: Cargo.toml
crates/token-authority-core/src/: lib.rs
crates/token-authority-program/: Cargo.toml
crates/token-authority-program/src/: authority.rs  burn.rs  initialize.rs  lib.rs  mint.rs  new_definition.rs  print_nft.rs  tests.rs  transfer.rs
crates/token-authority-sdk/: Cargo.toml
crates/token-authority-sdk/src/: lib.rs
docs/: DEPLOYMENT.md  README.md  SPEL_STATUS.md  architecture.md  criteria-checklist.md  design.md  error-codes.md  security.md
docs/benchmarks/: cu-budget.md
examples/config-pda-gate/: Cargo.toml
examples/config-pda-gate/src/: main.rs
examples/fixed-supply/: Cargo.toml
examples/fixed-supply/src/: main.rs
examples/variable-supply/: Cargo.toml
examples/variable-supply/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/tests/: authority_flow.rs  token_authority.rs
scripts/: demo.sh
spel-sidecar/: Cargo.toml
spel-sidecar/src/: lib.rs
