[package]
name = "lez-approval"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agnostic single-admin approval library for LEZ programs (RFP-001)"
repository = "https://github.com/edenbd1/lp-0013-token-authorities"
keywords = ["logos", "lez", "authority", "approval", "admin"]
categories = ["cryptography", "no-std"]

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
