[package]
name = "token-authority-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core types for the LEZ token program with mint authority support"

[dependencies]
lez-approval = { path = "../lez-approval" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "006647b" }
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
